--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="google-site-verification" content="Q5pnwPn9Pw9PGhL2IFZtbluzDhJdrFogleocNJsHxS4" />
-  <title>My Backlinks</title>
+<meta name="google-site-verification" content="Q5pnwPn9Pw9PGhL2IFZtbluzDhJdrFogleocNJsHxS4" />  <title>My Backlinks</title>
 </head>
 <body>
   <h1>My Backlinks Page</h1>
