--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-<meta name="google-site-verification" content="Q5pnwPn9Pw9PGhL2IFZtbluzDhJdrFogleocNJsHxS4" />  <title>My Backlinks</title>
+  <meta name="google-site-verification" content="Q5pnwPn9Pw9PGhL2IFZtbluzDhJdrFogleocNJsHxS4" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Backlinks</title>
 </head>
 <body>
   <h1>My Backlinks Page</h1>
-  <p>This page contains a curated list of reference and article links.</p>
+  <p>This page contains a curated list of backlinks for quick reference and indexing.</p>
+  <ul>
+    <li><a href="https://intermilanfansclub.com/read-blog/22290" target="_blank">Backlink 1</a></li>
+    <li><a href="https://celticfansclub.com/read-blog/22503" target="_blank">Backlink 2</a></li>
+    <li><a href="https://uscheapshoeclub.com/read-blog/17993" target="_blank">Backlink 3</a></li>
+    <li><a href="https://www.tumblr.com/educationvives/804906805247541248/cost-of-mbbs-in-uk-fees-guide-for-indian-students?source=share" target="_blank">Backlink 4</a></li>
+    <li><a href="https://ubuntusafa.com/blogs/428065/Cost-of-MBBS-in-UK-Fees-Guide-for-Indian-Students" target="_blank">Backlink 5</a></li>
+    <li><a href="https://castocus.com/blogs/40555/MBBS-in-UK-for-Indian-Students-Top-Medical-Schools-Entry" target="_blank">Backlink 6</a></li>
+    <li><a href="https://articlescad.com/mbbs-admission-in-uk-criteria-exams-documents-21061.html" target="_blank">Backlink 7</a></li>
+    <li><a href="https://bacoli.app/blogs/55426/MBBS-in-UK-for-Indian-Students-A-Complete-Guide-to" target="_blank">Backlink 8</a></li>
+    <li><a href="https://prosafely.com/read-blog/28975" target="_blank">Backlink 9</a></li>
+    <li><a href="https://drviet.com/read-blog/5450" target="_blank">Backlink 10</a></li>
+    <li><a href="https://top1muabansi.com/read-blog/46538_mbbs-in-london-fees-in-rupees-complete-cost-guide-for-indian-students-2025.html" target="_blank">Backlink 11</a></li>
+    <li><a href="https://occ.orioncode.sg/read-blog/47921" target="_blank">Backlink 12</a></li>
+    <li><a href="https://taggedface.com/blogs/61737/MBBS-in-UK-Cost-Fees-and-Opportunities-for-Indian-Students" target="_blank">Backlink 13</a></li>
+    <li><a href="https://intermilanfansclub.com/read-blog/22290" target="_blank">Backlink 14</a></li>
+  </ul>
 </body>
 </html>
