--- a/index.html
+++ b/index.html
@@ -1,112 +1,55 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="google-site-verification" content="Q5pnwPn9Pw9PGhL2IFZtbluzDhJdrFogleocNJsHxS4" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>MBBS in UK Backlinks List - Fast Indexing Page</title>
 
-  <title>Study Abroad & MBBS Backlinks Resource | Education Niches</title>
+<meta name="description" content="MBBS in UK backlinks and study abroad resources for fast Google indexing and SEO crawling.">
 
-  <meta name="description" content="A curated list of education, MBBS, and study abroad related backlinks created for faster indexing, reference, and SEO discovery.">
+<meta name="robots" content="index, follow">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <body>
 
-  <h1>Study Abroad & MBBS Backlinks Resource</h1>
+<h1>MBBS in UK Backlinks List</h1>
 
-  <p>
-    This page contains a curated list of education and MBBS-related backlinks.
-    It is created to help search engines and AI systems discover, crawl, and index
-    important study abroad content efficiently.
-  </p>
+<p>This page contains MBBS in UK study resources and backlinks created for search engine indexing.</p>
 
-  <h2>MBBS & Study Abroad Backlinks</h2>
+<h2>MBBS in UK Articles and Resources</h2>
 
-  <ul>
-    <li>
-      <a href="https://intermilanfansclub.com/read-blog/22290" target="_blank">
-        MBBS in UK – Admission & Fees Guide
-      </a>
-    </li>
+<ul>
 
-    <li>
-      <a href="https://celticfansclub.com/read-blog/22503" target="_blank">
-        MBBS in UK for Indian Students – Complete Overview
-      </a>
-    </li>
+<li><a href="https://webyourself.eu/blogs/1803753/MBBS-in-UK-Your-Complete-Roadmap-to-Studying-Medicine-in">MBBS in UK Complete Roadmap</a></li>
 
-    <li>
-      <a href="https://uscheapshoeclub.com/read-blog/17993" target="_blank">
-        Cost of Studying MBBS in the UK
-      </a>
-    </li>
+<li><a href="https://articlescad.com/mbbs-in-uk-your-complete-roadmap-to-studying-medicine-in-the-united-kingdom-6222.html">Study MBBS in UK Guide</a></li>
 
-    <li>
-      <a href="https://www.tumblr.com/educationvives/804906805247541248/cost-of-mbbs-in-uk-fees-guide-for-indian-students" target="_blank">
-        MBBS in UK Fees Guide (Tumblr)
-      </a>
-    </li>
+<li><a href="https://3rrend.com/read-blog/77274">MBBS in UK Article</a></li>
 
-    <li>
-      <a href="https://ubuntusafa.com/blogs/428065/Cost-of-MBBS-in-UK-Fees-Guide-for-Indian-Students" target="_blank">
-        MBBS in UK Fees & Living Cost Details
-      </a>
-    </li>
+<li><a href="https://postr.yruz.one/mbbs-in-uk-for-indian-student-guide">MBBS in UK for Indian Students</a></li>
 
-    <li>
-      <a href="https://castocus.com/blogs/40555/MBBS-in-UK-for-Indian-Students-Top-Medical-Schools-Entry" target="_blank">
-        Top Medical Schools in the UK for Indian Students
-      </a>
-    </li>
+<li><a href="https://www.leenkup.com/read-blog/99746">MBBS in UK Resource</a></li>
 
-    <li>
-      <a href="https://articlescad.com/mbbs-admission-in-uk-criteria-exams-documents-21061.html" target="_blank">
-        MBBS Admission in UK – Eligibility & Documents
-      </a>
-    </li>
+<li><a href="https://network.musicdiffusion.com/read-blog/78690">MBBS in UK Study Article</a></li>
 
-    <li>
-      <a href="https://bacoli.app/blogs/55426/MBBS-in-UK-for-Indian-Students-A-Complete-Guide-to" target="_blank">
-        Complete Guide to MBBS in UK for Indian Students
-      </a>
-    </li>
+<li><a href="https://app.khest.org/read-blog/13025">MBBS in UK Education Article</a></li>
 
-    <li>
-      <a href="https://prosafely.com/read-blog/28975" target="_blank">
-        MBBS in UK – Student Perspective
-      </a>
-    </li>
+<li><a href="https://theomnibuzz.com/mbbs-in-uk---complete-guide-for-indian-students--fees--eligibility-and-career-opportunities">MBBS in UK Complete Guide</a></li>
 
-    <li>
-      <a href="https://drviet.com/read-blog/5450" target="_blank">
-        Studying Medicine in the UK – Overview
-      </a>
-    </li>
+<li><a href="https://networking.dnake.ma/read-blog/13276">MBBS in UK Information</a></li>
 
-    <li>
-      <a href="https://top1muabansi.com/read-blog/46538_mbbs-in-london-fees-in-rupees-complete-cost-guide-for-indian-students-2025.html" target="_blank">
-        MBBS in London Fees in Rupees (2025)
-      </a>
-    </li>
+<li><a href="https://joyrulez.com/blogs/265424/MBBS-in-UK-Complete-Guide-for-Indian-Students-Fees-Eligibility">MBBS in UK Fees and Eligibility</a></li>
 
-    <li>
-      <a href="https://occ.orioncode.sg/read-blog/47921" target="_blank">
-        MBBS in UK – Cost & Career Scope
-      </a>
-    </li>
+</ul>
 
-    <li>
-      <a href="https://taggedface.com/blogs/61737/MBBS-in-UK-Cost-Fees-and-Opportunities-for-Indian-Students" target="_blank">
-        MBBS in UK: Fees & Opportunities for Indian Students
-      </a>
-    </li>
-  </ul>
+<h2>Study MBBS Abroad Resources</h2>
 
-  <p>
-    <strong>Last updated:</strong> January 2026.  
-    This page is actively maintained to support faster indexing and discovery.
-  </p>
+<p>Updated MBBS in UK backlinks list for students planning to study medicine abroad.</p>
+
+<p>This indexing page helps search engines discover new MBBS in UK articles and resources faster.</p>
 
 </body>
+
 </html>
