--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-<title>MBBS in UK Backlinks List - Fast Indexing Page</title>
 
-<meta name="description" content="MBBS in UK backlinks and study abroad resources for fast Google indexing and SEO crawling.">
+<title>MBBS in UK Articles and Study Resources</title>
+
+<meta name="description" content="Useful MBBS in UK articles and study resources for students planning to study medicine in the United Kingdom.">
 
 <meta name="robots" content="index, follow">
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
 <body>
 
-<h1>MBBS in UK Backlinks List</h1>
+<h1>MBBS in UK Articles and Study Resources</h1>
 
-<p>This page contains MBBS in UK study resources and backlinks created for search engine indexing.</p>
+<p>This page contains useful MBBS in UK related articles and study resources for students interested in medical education in the United Kingdom.</p>
 
-<h2>MBBS in UK Articles and Resources</h2>
+<h2>MBBS in UK Articles</h2>
 
 <ul>
 
@@ -44,11 +42,7 @@
 
 </ul>
 
-<h2>Study MBBS Abroad Resources</h2>
-
-<p>Updated MBBS in UK backlinks list for students planning to study medicine abroad.</p>
-
-<p>This indexing page helps search engines discover new MBBS in UK articles and resources faster.</p>
+<p>These MBBS in UK articles provide helpful information for students planning to study medicine abroad.</p>
 
 </body>
 
